Fix spacing issue on header and body

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 header {
     background-color: pink;
 }
@@ -6,4 +10,8 @@ main {
 }
 footer {
     background-color: red;
+}
+
+ul {
+    margin: 0;
 }
